plugins {
    id 'maven-publish'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}

group = 'org.reactfx'
sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

dependencies {

}

javafx {
    version = "19.0.2.1"
    modules = [ 'javafx.graphics', 'javafx.controls' ]
}

tasks.withType(JavaCompile) {
    options.compilerArgs += [
            '--add-exports=javafx.base/com.sun.javafx.binding=reactfx'
    ]
}

task sourcesJar(type: Jar) {
    archiveClassifier = 'sources'
    from sourceSets.main.allSource
}